# nyanko

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
docs/: architecture.md
examples/: generate_dummy_graphics.rs  generate_dummy_pack.rs  get_pack_weight.rs  read_graphics_assets.rs  read_pack_assets.rs
src/: bcu.rs  chapter.rs  enemy.rs  graphics.rs  lib.rs  pack.rs
src/animation/: build.rs  engine.rs  find.rs  mod.rs
src/animation/data/: maanim.rs  mamodel.rs  mod.rs
src/animation/graphics/: canvas.rs  construct.rs  mod.rs  timeline.rs  transform.rs
src/animation/utils/: boundary.rs  periodicity.rs
src/bcu/: cryptology.rs  mod.rs
src/bcu/cryptology/: ciphers.rs  parser.rs
src/bcu/utils/: ciphers.rs  mod.rs  parser.rs
src/cat/: abilities.rs  mod.rs  unit.rs
src/cat/data/: mod.rs  skillacquisition.rs  skilldescriptions.rs  skilllevel.rs  unitbuy.rs  unitevolve.rs  unitexplanation.rs  unitid.rs  unitlevel.rs
src/cat/unit/: skillacquisition.rs  skilldescriptions.rs  skilllevel.rs  unitbuy.rs  unitevolve.rs  unitexplanation.rs  unitid.rs  unitlevel.rs
src/chapter/: category.rs  map.rs  mod.rs  stage.rs
src/chapter/data/: battleground.rs  certification_preset.rs  dropitem.rs  fixed_formation.rs  mod.rs  scatcpusetting.rs  scorebonusmap.rs  specialrulesmap.rs  stage_option.rs  stagename.rs
src/chapter/domain/: mod.rs
src/chapter/map/: dropitem.rs  ex_option.rs  lockskipdata.rs  map_name.rs  map_option.rs  redirect.rs  scorebonusmap.rs  specialrulesmap.rs  specialrulesmapoption.rs
src/chapter/stage/: battleground.rs  certification_preset.rs  charagroup.rs  difficulty_level.rs  drop_chara.rs  fixed_formation.rs  mapstagedata.rs  scatcpusetting.rs  stage_option.rs  stagename.rs  xp.rs
src/common/: data.rs  mod.rs  tools.rs
src/common/data/: img015.rs  img022.rs  imgcut.rs  localizable.rs  mod.rs  param.rs
src/common/tools/: file.rs  variant.rs
src/common/utils/: csv.rs  mod.rs  variant.rs
src/enemy/: abilities.rs  mod.rs  unit.rs
src/enemy/data/: enemyname.rs  enemypicturebook.rs  mod.rs  t_unit.rs
src/enemy/unit/: enemyname.rs  enemypicturebook.rs  t_unit.rs
src/graphics/: actor.rs  animation.rs  engine.rs  image.rs  mod.rs  rig.rs  tools.rs
src/graphics/data/: imgcut.rs  maanim.rs  mamodel.rs  mod.rs
src/graphics/engine/: construct.rs  timeline.rs  transform.rs
src/graphics/game/: construct.rs  timeline.rs  transform.rs
src/graphics/rig/: imgcut.rs  maanim.rs  mamodel.rs
src/graphics/tools/: boundary.rs  math.rs  periodicity.rs
src/graphics/utils/: boundary.rs  math.rs  mod.rs  periodicity.rs
src/pack/: chronology.rs  cryptology.rs  mod.rs
src/pack/cryptology/: ciphers.rs
src/pack/utils/: ciphers.rs  mod.rs  verify.rs
