[package]
name = "nyanko"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure stateless library for handling game data, animations, and mods from The Battle Cats"

[dependencies]
# pack/
aes = { version = "0.9.0", optional = true }
block-padding = { version = "0.4.2", optional = true }
md5 = { version = "0.8.0", optional = true }
cbc = { version = "0.2.1", optional = true }
hex = { version = "0.4.3", optional = true }
cipher = { version = "0.5.2", optional = true }
ecb = { version = "0.2.0", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }

[features]
graphics = [
    "dep:image"
]
pack = [
    "dep:aes",
    "dep:block-padding",
    "dep:md5",
    "dep:cbc",
    "dep:hex",
    "dep:cipher",
    "dep:ecb"
]