[package]
name = "nyanko"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
authors = ["omochikaeri15 <251449262+omochikaeri15@users.noreply.github.com>"]
repository = "https://github.com/omochikaeri15/Nyanko"
description = "Pure stateless library for handling game quirks, animations, and data from The Battle Cats"

[dependencies]
# pack/
aes = { version = "0.9.0", optional = true }
block-padding = { version = "0.4.2", optional = true }
md5 = { version = "0.8.0", optional = true }
cbc = { version = "0.2.1", optional = true }
hex = { version = "0.4.3", optional = true }
cipher = { version = "0.5.2", optional = true }
ecb = { version = "0.2.0", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }

[features]
graphics = [
    "dep:image"
]
pack = [
    "dep:aes",
    "dep:block-padding",
    "dep:md5",
    "dep:cbc",
    "dep:hex",
    "dep:cipher",
    "dep:ecb"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]