[package]
name = "nyanko"
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
authors = ["omochikaeri15 <251449262+omochikaeri15@users.noreply.github.com>"]
repository = "https://github.com/omochikaeri15/nyanko"
description = "Pure stateless library for handling game quirks, animations, and data from The Battle Cats"

[dependencies]
aes = { version = "0.9.1", optional = true }
block-padding = { version = "0.4.2", optional = true }
md5 = { package = "md-5", version = "0.11.0", optional = true }
cbc = { version = "0.2.1", optional = true }
hex = { version = "0.4.3", optional = true }
cipher = { version = "0.5.2", optional = true }
ecb = { version = "0.2.0", optional = true }
image = { version = "0.25.10", default-features = false, features = ["png"], optional = true }
serde_json = { version = "1.0.150" }
serde = { version = "1.0.228", features = ["derive"] }

[features]
graphics = [
    "dep:image"
]
pack = [
    "dep:aes",
    "dep:block-padding",
    "dep:md5",
    "dep:cbc",
    "dep:hex",
    "dep:cipher",
    "dep:ecb"
]
bcu = [
    "dep:aes",
    "dep:block-padding",
    "dep:md5",
    "dep:cbc",
    "dep:cipher",
]

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]